[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["yu"]

[tool.poetry.dependencies]
python = "^3.8.10"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
